fix(ssr): html template build bug with hash enabled (#6678)
* fix(ssr): html template build bug with hash enabled

* chore: speed up yarn

* chore: azure

* chore: env

* chore: env

* chore: depth

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,12 +33,17 @@ jobs:
         displayName: Cache Yarn packages
       - script: yarn --frozen-lockfile
         displayName: install
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
       - script: yarn build
         displayName: build
-      - script: set NODE_OPTIONS='--max-old-space-size=4071' && yarn test --forceExit --detectOpenHandles --maxWorkers=2
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
+      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=2
         env:
           PROGRESS: none
           CI: true
+          NODE_OPTIONS: --max-old-space-size=16384
         displayName: test
   - job: linux_test
     timeoutInMinutes: 30
@@ -64,12 +69,17 @@ jobs:
           path: $(YARN_CACHE_FOLDER)
         displayName: Cache Yarn packages
       - script: yarn --frozen-lockfile
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
       - script: yarn build
         displayName: build
-      - script: NODE_OPTIONS='--max-old-space-size=4071' yarn test --forceExit --detectOpenHandles --maxWorkers=4
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
+      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=4
         env:
           PROGRESS: none
           CI: true
+          NODE_OPTIONS: --max-old-space-size=16384
         displayName: test
   - job: macos_test
     timeoutInMinutes: 30
@@ -95,10 +105,15 @@ jobs:
           path: $(YARN_CACHE_FOLDER)
         displayName: Cache Yarn packages
       - script: yarn --frozen-lockfile
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
       - script: yarn build
         displayName: build
-      - script: NODE_OPTIONS='--max-old-space-size=4071' yarn test --forceExit --detectOpenHandles --maxWorkers=4
+        env:
+          NODE_OPTIONS: --max-old-space-size=16384
+      - script: yarn test --forceExit --detectOpenHandles --maxWorkers=4
         env:
           PROGRESS: none
           CI: true
+          NODE_OPTIONS: --max-old-space-size=16384
         displayName: test
