--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -37,12 +37,13 @@
     "@umijs/utils": "3.5.0-beta.1",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
-    "mime": "1.6.0",
+    "mime": "1.3.0",
     "react-refresh": "0.9.0",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
-    "regenerator-runtime": "0.13.5"
+    "regenerator-runtime": "0.13.5",
+    "core-js" : "3.6.5"
   },
   "peerDependencies": {
     "react": "16.x || 17.x"
