--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -26,7 +26,8 @@
     "access": "public"
   },
   "scripts": {
-    "bundleWebpackHotDevClient": "COMPRESS=none ./bin/bundler-webpack.js build && node ./scripts/patchWebpackHotDevClient.js"
+    "bundleWebpackHotDevClient": "BABEL_CACHE=none COMPRESS=none ./bin/bundler-webpack.js build && node ./scripts/patchWebpackHotDevClient.js",
+    "bundleHotModuleReplacement": "node scripts/bundleHotModuleReplacement.js"
   },
   "devDependencies": {
     "@types/sockjs-client": "1.5.0",
