chore: example add with-mobx

--- a/examples/with-dva/package.json
+++ b/examples/with-dva/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "umi",
-    "umi examples"
+    "umi examples",
+    "dva"
   ],
   "authors": [
     "xiaohuoni <xiaohuoni@gmail.com> (https://github.com/xiaohuoni)"
