--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -36,6 +36,7 @@
     "@umijs/types": "3.5.0-beta.4",
     "@umijs/utils": "3.5.0-beta.4",
     "core-js": "3.6.5",
+    "es-module-lexer": "0.6.0",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
     "mime": "1.3.0",
