--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [12.x, 14.x, 16.x]
+        node_version: [12.x, 14.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
       fail-fast: false
     steps:
