--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/types",
-  "version": "3.5.0-beta.20",
+  "version": "3.5.0",
   "description": "@umijs/types",
   "main": "lib/index.js",
   "types": "index",
@@ -25,11 +25,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/babel-preset-umi": "3.5.0-beta.20",
-    "@umijs/core": "3.5.0-beta.20",
-    "@umijs/deps": "3.5.0-beta.20",
-    "@umijs/server": "3.5.0-beta.20",
-    "@umijs/utils": "3.5.0-beta.20",
+    "@umijs/babel-preset-umi": "3.5.0",
+    "@umijs/core": "3.5.0",
+    "@umijs/deps": "3.5.0",
+    "@umijs/server": "3.5.0",
+    "@umijs/utils": "3.5.0",
     "webpack-chain": "6.5.1"
   }
 }
