fix: mfsu don't work with mpa mode

--- a/packages/renderer-mpa/package.json
+++ b/packages/renderer-mpa/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "lib",
-    "src"
+    "src",
+    "dist"
   ],
   "repository": {
     "type": "git",
