--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -35,12 +35,17 @@
     "@umijs/server": "3.5.3",
     "@umijs/types": "3.5.3",
     "@umijs/utils": "3.5.3",
+    "ansi-html": "^0.0.7",
+    "core-js-pure": "^3.8.1",
+    "error-stack-parser": "^2.0.6",
+    "html-entities": "^2.1.0",
+    "schema-utils": "^3.0.0",
     "core-js": "3.6.5",
     "es-module-lexer": "0.6.0",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
     "mime": "1.3.0",
-    "react-refresh": "0.9.0",
+    "react-refresh": "0.10.0",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
