--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-built-in",
-  "version": "3.5.3",
+  "version": "3.5.4",
   "description": "@umijs/preset-built-in",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,30 +26,30 @@
   },
   "dependencies": {
     "@types/react-router-config": "5.0.2",
-    "@umijs/babel-preset-umi": "3.5.3",
-    "@umijs/bundler-webpack": "3.5.3",
-    "@umijs/deps": "3.5.3",
-    "@umijs/renderer-mpa": "3.5.3",
-    "@umijs/renderer-react": "3.5.3",
-    "@umijs/runtime": "3.5.3",
-    "@umijs/server": "3.5.3",
-    "@umijs/types": "3.5.3",
-    "@umijs/utils": "3.5.3",
+    "@umijs/babel-preset-umi": "3.5.4",
+    "@umijs/bundler-webpack": "3.5.4",
+    "@umijs/deps": "3.5.4",
+    "@umijs/renderer-mpa": "3.5.4",
+    "@umijs/renderer-react": "3.5.4",
+    "@umijs/runtime": "3.5.4",
+    "@umijs/server": "3.5.4",
+    "@umijs/types": "3.5.4",
+    "@umijs/utils": "3.5.4",
     "ansi-html": "^0.0.7",
+    "core-js": "3.6.5",
     "core-js-pure": "^3.8.1",
     "error-stack-parser": "^2.0.6",
-    "html-entities": "^2.1.0",
-    "schema-utils": "^3.0.0",
-    "core-js": "3.6.5",
     "es-module-lexer": "0.6.0",
     "es5-imcompatible-versions": "^0.1.62",
     "history-with-query": "4.10.4",
+    "html-entities": "^2.1.0",
     "mime": "1.3.0",
     "react-refresh": "0.10.0",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
     "react-router-dom": "5.2.0",
-    "regenerator-runtime": "0.13.5"
+    "regenerator-runtime": "0.13.5",
+    "schema-utils": "^3.0.0"
   },
   "peerDependencies": {
     "react": "16.x || 17.x"
