fix: mfsu support file parse with jsx and tsx

--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -39,6 +39,7 @@
     "@bloomberg/record-tuple-polyfill": "0.0.3",
     "chokidar": "3.5.1",
     "clipboardy": "2.3.0",
+    "esbuild": "0.12.15",
     "jest-worker": "24.9.0",
     "prettier": "2.2.1"
   },
