chore: init umi-next (#106)
* chore: init umi-next

* chore: add github ci build status badge

--- a/package.json
+++ b/package.json
@@ -1,7 +1,36 @@
 {
   "private": true,
+  "version": "4.0.0-alpha.1",
+  "scripts": {
+    "bootstrap": "zx scripts/bootstrap.mjs",
+    "build": "pnpm -r --filter ./packages run build",
+    "dev": "pnpm -r --filter ./packages --parallel run dev",
+    "test": "jest"
+  },
   "devDependencies": {
-    "prettier": "^2.3.0",
-    "prettier-plugin-organize-imports": "^2.1.0"
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.7",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "prettier-plugin-organize-imports": "^2.3.3",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.1.0",
+    "tsup": "^4.12.5",
+    "typescript": "^4.3.5",
+    "yorkie": "^2.0.0",
+    "zx": "^2.0.0"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "zx scripts/verifyCommit.mjs"
+  },
+  "lint-staged": {
+    "*.{jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
   }
 }
