--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/runtime": "7.15.3",
     "@bloomberg/record-tuple-polyfill": "0.0.3",
-    "@umijs/bundler-utils": "4.0.0-alpha.1"
+    "@umijs/bundler-utils": "4.0.0-alpha.1",
+    "core-js": "3.16.3"
   }
 }
