--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -29,5 +29,8 @@
     "@bloomberg/record-tuple-polyfill": "0.0.3",
     "@umijs/bundler-utils": "4.0.0-alpha.1",
     "core-js": "3.16.3"
+  },
+  "devDependencies": {
+    "@umijs/utils": "4.0.0-alpha.1"
   }
 }
