--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -28,9 +28,7 @@
     "@babel/runtime": "7.15.3",
     "@bloomberg/record-tuple-polyfill": "0.0.3",
     "@umijs/bundler-utils": "4.0.0-alpha.1",
+    "@umijs/utils": "4.0.0-alpha.1",
     "core-js": "3.16.3"
-  },
-  "devDependencies": {
-    "@umijs/utils": "4.0.0-alpha.1"
   }
 }
