--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/ncc": "^0.29.2",
     "dts-packer": "^0.0.1-alpha.1",
     "jest": "^27.0.6",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.3",
     "resolve": "^1.20.0",
