--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
-    "build:deps": "zx ../../scripts/bundleDeps.mjs",
+    "build:deps": "esno ../../scripts/bundleDeps.ts",
     "dev": "npm run build -- --watch",
     "generate:webpackPackages": "zx ./scripts/generateWebpackPackages.mjs"
   },
