--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
-    "build:deps": "zx ../../scripts/bundleDeps.mjs",
+    "build:deps": "esno ../../scripts/bundleDeps.ts",
     "dev": "npm run build -- --watch"
   },
   "repository": {
