--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,12 +6,16 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
+    "dev": "pnpm build -- --watch"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/umijs/umi-next"
   },
   "license": "MIT",
-  "bugs": "http://github.com/umijs/umi-next/issues",
+  "bugs": "https://github.com/umijs/umi-next/issues",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/core#readme",
   "publishConfig": {
     "access": "public"
