--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
-    "build:deps": "esno ../../scripts/bundleDeps.ts",
-    "dev": "npm run build -- --watch"
+    "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
+    "dev": "pnpm build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
   ],
   "license": "MIT",
-  "bugs": "http://github.com/umijs/umi-next/issues",
+  "bugs": "https://github.com/umijs/umi-next/issues",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-utils#readme",
   "publishConfig": {
     "access": "public"
