--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -10,8 +10,8 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
-    "build:deps": "esno ../../scripts/bundleDeps.ts",
-    "dev": "npm run build -- --watch",
+    "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
+    "dev": "pnpm build -- --watch",
     "generate:webpackPackages": "zx ./scripts/generateWebpackPackages.mjs"
   },
   "repository": {
@@ -22,7 +22,7 @@
     "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
   ],
   "license": "MIT",
-  "bugs": "http://github.com/umijs/umi-next/issues",
+  "bugs": "https://github.com/umijs/umi-next/issues",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/bundler-webpack#readme",
   "publishConfig": {
     "access": "public"
