chore: enable prettier-plugin-organize-imports

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,8 @@
   "proseWrap": "never",
   "overrides": [
     { "files": ".prettierrc", "options": { "parser": "json" } }
+  ],
+  "plugins": [
+    "prettier-plugin-organize-imports"
   ]
 }
