--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -8,7 +8,7 @@
     "compiled"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
+    "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch"
   },
