--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.7",
     "@types/resolve": "^1.20.1",
+    "@umijs/bundler-webpack": "file:./packages/bundler-webpack",
+    "@umijs/bundler-utils": "file:./packages/bundler-utils",
+    "@umijs/utils": "file:./packages/utils",
     "@vercel/ncc": "^0.30.0",
     "dts-packer": "^0.0.1-alpha.1",
     "esno": "^0.9.1",
@@ -22,7 +25,6 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
-    "tsup": "^4.12.5",
     "typescript": "^4.3.5",
     "yorkie": "^2.0.0",
     "zx": "^4.0.0"
