--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,7 +8,7 @@
     "compiled"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup src/index.ts --dts --format cjs",
+    "build": "pnpm tsc",
     "build:deps": "pnpm esno ../../scripts/bundleDeps.ts",
     "dev": "pnpm build -- --watch"
   },
@@ -44,6 +44,7 @@
     "fs-extra": "10.0.0",
     "globby": "12.0.1",
     "lodash": "4.17.21",
+    "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
     "rimraf": "3.0.2",
     "semver": "7.3.5",
@@ -60,6 +61,7 @@
       "fs-extra",
       "globby",
       "lodash",
+      "pkg-up",
       "portfinder",
       "rimraf",
       "semver",
@@ -75,6 +77,7 @@
       "fs-extra": "$$LOCAL",
       "globby": "$$LOCAL",
       "lodash": "$$LOCAL",
+      "pkg-up": "$$LOCAL",
       "portfinder": "$$LOCAL",
       "rimraf": "$$LOCAL",
       "semver": "$$LOCAL",
