--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,3 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "noUnusedLocals": true,
-    "esModuleInterop": true
-  },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "fixtures"
-  ]
+  "extends": "./tsconfig.base.json"
 }
