--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -55,15 +55,18 @@
     "@types/babel__parser": "7.1.1",
     "@types/babel__template": "7.4.1",
     "@types/babel__traverse": "7.14.2",
+    "cjs-module-lexer": "1.2.2",
     "es-module-lexer": "0.7.1"
   },
   "compiledConfig": {
     "deps": [
+      "cjs-module-lexer",
       "es-module-lexer",
       "esbuild",
       "./bundles/babel/bundle"
     ],
     "externals": {
+      "cjs-module-lexer": "$$LOCAL",
       "debug": "@umijs/utils/compiled/debug",
       "esbuild": "$$LOCAL",
       "es-module-lexer": "$$LOCAL"
