--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,9 @@
     "type": "git",
     "url": "https://github.com/umijs/umi-next"
   },
+  "authors": [
+    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
+  ],
   "license": "MIT",
   "bugs": "https://github.com/umijs/umi-next/issues",
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/core#readme",
