--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -41,9 +41,12 @@
     "@types/webpack-sources": "3.2.0",
     "babel-loader": "8.2.2",
     "css-loader": "6.2.0",
+    "css-minimizer-webpack-plugin": "3.0.2",
+    "cssnano": "5.0.8",
     "less": "4.1.1",
     "less-loader": "10.0.1",
     "mini-css-extract-plugin": "2.2.2",
+    "postcss": "8.3.6",
     "sass-loader": "12.1.0",
     "schema-utils": "3.1.1",
     "style-loader": "3.2.1",
@@ -58,9 +61,12 @@
     "deps": [
       "babel-loader",
       "css-loader",
+      "css-minimizer-webpack-plugin",
+      "cssnano",
       "less",
       "less-loader",
       "mini-css-extract-plugin",
+      "postcss",
       "sass-loader",
       "schema-utils",
       "style-loader",
@@ -78,6 +84,8 @@
       "esbuild": "@umijs/bundler-utils/compiled/esbuild",
       "jest-worker": "jest-worker",
       "less": "$$LOCAL",
+      "cssnano": "$$LOCAL",
+      "postcss": "$$LOCAL",
       "schema-utils": "$$LOCAL",
       "tapable": "$$LOCAL",
       "terser": "$$LOCAL",
@@ -103,8 +111,11 @@
     "excludeDtsDeps": [
       "babel-loader",
       "css-loader",
+      "css-minimizer-webpack-plugin",
+      "cssnano",
       "less",
       "less-loader",
+      "postcss",
       "sass-loader",
       "mini-css-extract-plugin",
       "style-loader"
