--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -35,10 +35,13 @@
     "@umijs/babel-preset-umi": "4.0.0-alpha.1",
     "@umijs/utils": "4.0.0-alpha.1",
     "es5-imcompatible-versions": "^0.1.73",
-    "jest-worker": "27.1.0"
+    "jest-worker": "27.1.0",
+    "postcss": "8.3.6",
+    "postcss-preset-env": "6.7.0"
   },
   "devDependencies": {
     "@types/webpack-sources": "3.2.0",
+    "autoprefixer": "10.3.4",
     "babel-loader": "8.2.2",
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
@@ -46,7 +49,8 @@
     "less": "4.1.1",
     "less-loader": "10.0.1",
     "mini-css-extract-plugin": "2.2.2",
-    "postcss": "8.3.6",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "6.1.1",
     "purgecss-webpack-plugin": "4.0.3",
     "sass-loader": "12.1.0",
     "schema-utils": "3.1.1",
@@ -62,6 +66,7 @@
   },
   "compiledConfig": {
     "deps": [
+      "autoprefixer",
       "babel-loader",
       "css-loader",
       "css-minimizer-webpack-plugin",
@@ -69,7 +74,8 @@
       "less",
       "less-loader",
       "mini-css-extract-plugin",
-      "postcss",
+      "postcss-flexbugs-fixes",
+      "postcss-loader",
       "purgecss-webpack-plugin",
       "sass-loader",
       "schema-utils",
@@ -91,7 +97,7 @@
       "jest-worker": "jest-worker",
       "less": "$$LOCAL",
       "cssnano": "$$LOCAL",
-      "postcss": "$$LOCAL",
+      "postcss": "postcss",
       "schema-utils": "$$LOCAL",
       "tapable": "$$LOCAL",
       "terser": "$$LOCAL",
@@ -123,7 +129,8 @@
       "less",
       "less-loader",
       "mini-css-extract-plugin",
-      "postcss",
+      "postcss-flexbugs-fixes",
+      "postcss-loader",
       "purgecss-webpack-plugin",
       "sass-loader",
       "speed-measure-webpack-plugin",
