--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -41,12 +41,15 @@
     "postcss-preset-env": "6.7.0"
   },
   "devDependencies": {
+    "@types/express": "4.17.13",
     "@types/webpack-sources": "3.2.0",
+    "@types/ws": "7.4.7",
     "autoprefixer": "10.3.4",
     "babel-loader": "8.2.2",
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
     "cssnano": "5.0.8",
+    "express": "4.17.1",
     "less": "4.1.1",
     "less-loader": "10.0.1",
     "mini-css-extract-plugin": "2.2.2",
@@ -63,7 +66,9 @@
     "webpack": "5.51.1",
     "webpack-5-chain": "8.0.0",
     "webpack-bundle-analyzer": "4.4.2",
-    "webpack-sources": "3.2.0"
+    "webpack-dev-middleware": "5.0.0",
+    "webpack-sources": "3.2.0",
+    "ws": "8.2.1"
   },
   "compiledConfig": {
     "deps": [
@@ -72,6 +77,7 @@
       "css-loader",
       "css-minimizer-webpack-plugin",
       "cssnano",
+      "express",
       "less",
       "less-loader",
       "mini-css-extract-plugin",
@@ -87,7 +93,9 @@
       "terser-webpack-plugin",
       "webpack-5-chain",
       "webpack-bundle-analyzer",
+      "webpack-dev-middleware",
       "webpack-sources",
+      "ws",
       "./bundles/webpack/bundle"
     ],
     "externals": {
@@ -95,6 +103,7 @@
       "@babel/core": "@umijs/bundler-utils/compiled/babel/core",
       "es-module-lexer": "@umijs/bundler-utils/compiled/es-module-lexer",
       "esbuild": "@umijs/bundler-utils/compiled/esbuild",
+      "express": "$$LOCAL",
       "jest-worker": "jest-worker",
       "less": "$$LOCAL",
       "cssnano": "$$LOCAL",
@@ -104,7 +113,8 @@
       "terser-webpack-plugin": "$$LOCAL",
       "uglify-js": "uglify-js",
       "webpack-5-chain": "$$LOCAL",
-      "webpack-sources": "$$LOCAL"
+      "webpack-sources": "$$LOCAL",
+      "ws": "$$LOCAL"
     },
     "noMinify": [
       "./bundles/webpack/bundle",
@@ -135,7 +145,8 @@
       "sass-loader",
       "speed-measure-webpack-plugin",
       "style-loader",
-      "webpack-bundle-analyzer"
+      "webpack-bundle-analyzer",
+      "webpack-dev-middleware"
     ]
   }
 }
