--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -49,6 +49,7 @@
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
     "cssnano": "5.0.8",
+    "compression": "1.7.4",
     "express": "4.17.1",
     "less": "4.1.1",
     "less-loader": "10.0.1",
@@ -77,6 +78,7 @@
       "css-loader",
       "css-minimizer-webpack-plugin",
       "cssnano",
+      "compression",
       "express",
       "less",
       "less-loader",
@@ -136,6 +138,7 @@
       "css-loader",
       "css-minimizer-webpack-plugin",
       "cssnano",
+      "compression",
       "less",
       "less-loader",
       "mini-css-extract-plugin",
