--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -24,5 +24,10 @@
   "homepage": "https://github.com/umijs/umi-next/tree/master/packages/mfsu#readme",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@umijs/bundler-utils": "4.0.0-alpha.1",
+    "@umijs/bundler-webpack": "4.0.0-alpha.1",
+    "@umijs/utils": "4.0.0-alpha.1"
   }
 }
