--- a/packages/utils/compiled/address/package.json
+++ b/packages/utils/compiled/address/package.json
@@ -1,1 +1,1 @@
-{"name":"address","main":"address.js","author":"fengmk2 <fengmk2@gmail.com>","license":"MIT","types":"lib/address.d.ts"}
+{"name":"address","author":"fengmk2 <fengmk2@gmail.com>","license":"MIT","types":"lib/address.d.ts"}
