chore: add bundler-webpack-demo example

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /node_modules
+/examples/*/.umi
+/examples/*/node_modules
 /packages/*/node_modules
 /packages/*/dist
 /packages/*/tsconfig.tsbuildinfo
