--- a/examples/bundler-webpack-demo/package.json
+++ b/examples/bundler-webpack-demo/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0-alpha-fd5e01c2e-20210913",
+    "react-dom": "^18.0.0-alpha-fd5e01c2e-20210913"
   }
 }
