feat: integrate mfsu to bundler-webpack

--- a/packages/bundler-utils/compiled/@babel/generator/package.json
+++ b/packages/bundler-utils/compiled/@babel/generator/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/generator","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
+{"name":"@babel/generator","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
