--- a/packages/bundler-utils/compiled/@babel/template/package.json
+++ b/packages/bundler-utils/compiled/@babel/template/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/template","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
+{"name":"@babel/template","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
