--- a/packages/bundler-utils/compiled/@babel/types/package.json
+++ b/packages/bundler-utils/compiled/@babel/types/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/types","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT","types":"./lib/index-legacy.d.ts"}
+{"name":"@babel/types","author":"The Babel Team (https://babel.dev/team)","license":"MIT","types":"./lib/index-legacy.d.ts"}
