--- a/packages/bundler-utils/compiled/cjs-module-lexer/package.json
+++ b/packages/bundler-utils/compiled/cjs-module-lexer/package.json
@@ -1,1 +1,1 @@
-{"name":"cjs-module-lexer","main":"lexer.js","author":"Guy Bedford","license":"MIT","types":"lexer.d.ts"}
+{"name":"cjs-module-lexer","author":"Guy Bedford","license":"MIT","types":"lexer.d.ts"}
