--- a/packages/bundler-utils/compiled/@babel/code-frame/package.json
+++ b/packages/bundler-utils/compiled/@babel/code-frame/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/code-frame","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
+{"name":"@babel/code-frame","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
