--- a/packages/bundler-utils/compiled/@babel/parser/package.json
+++ b/packages/bundler-utils/compiled/@babel/parser/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/parser","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT","types":"./typings/babel-parser.d.ts"}
+{"name":"@babel/parser","author":"The Babel Team (https://babel.dev/team)","license":"MIT","types":"./typings/babel-parser.d.ts"}
