--- a/packages/bundler-utils/compiled/@babel/traverse/package.json
+++ b/packages/bundler-utils/compiled/@babel/traverse/package.json
@@ -1,1 +1,1 @@
-{"name":"@babel/traverse","main":"index.js","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
+{"name":"@babel/traverse","author":"The Babel Team (https://babel.dev/team)","license":"MIT"}
