--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.0-alpha.1",
   "scripts": {
     "bootstrap": "esno scripts/bootstrap.ts",
-    "build": "pnpm -r --filter ./packages run build",
+    "build": "pnpm -r --filter ./packages run build && pnpm -r --filter ./packages run build",
     "dev": "pnpm -r --filter ./packages --parallel run dev",
     "test": "jest"
   },
