--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -48,6 +48,7 @@
     "@types/ws": "7.4.7",
     "autoprefixer": "10.3.4",
     "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "6.1.0",
     "css-loader": "6.2.0",
     "css-minimizer-webpack-plugin": "3.0.2",
     "cssnano": "5.0.8",
@@ -77,6 +78,7 @@
     "deps": [
       "autoprefixer",
       "babel-loader",
+      "copy-webpack-plugin",
       "css-loader",
       "css-minimizer-webpack-plugin",
       "cssnano",
@@ -137,6 +139,7 @@
     ],
     "excludeDtsDeps": [
       "babel-loader",
+      "copy-webpack-plugin",
       "css-loader",
       "css-minimizer-webpack-plugin",
       "cssnano",
