fix: build dep copy-webpack-plugin (#120)

--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -118,6 +118,7 @@
       "terser": "$$LOCAL",
       "terser-webpack-plugin": "$$LOCAL",
       "uglify-js": "uglify-js",
+      "webpack": "$$LOCAL",
       "webpack-5-chain": "$$LOCAL",
       "webpack-sources": "$$LOCAL",
       "ws": "$$LOCAL"
