--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,14 +30,17 @@
   },
   "devDependencies": {
     "@types/hapi__joi": "17.1.7",
-    "@hapi/joi": "17.1.1"
+    "@hapi/joi": "17.1.1",
+    "just-diff": "3.1.1"
   },
   "compiledConfig": {
     "deps": [
-      "@hapi/joi"
+      "@hapi/joi",
+      "just-diff"
     ],
     "externals": {
-      "@hapi/joi": "$$LOCAL"
+      "@hapi/joi": "$$LOCAL",
+      "just-diff": "$$LOCAL"
     }
   }
 }
