--- a/packages/utils/compiled/fs-extra/package.json
+++ b/packages/utils/compiled/fs-extra/package.json
@@ -1,1 +1,1 @@
-{"name":"fs-extra","main":"index.js","author":"JP Richardson <jprichardson@gmail.com>","license":"MIT"}
+{"name":"fs-extra","author":"JP Richardson <jprichardson@gmail.com>","license":"MIT"}
