--- a/packages/utils/compiled/cheerio/package.json
+++ b/packages/utils/compiled/cheerio/package.json
@@ -1,1 +1,1 @@
-{"name":"cheerio","main":"index.js","author":"Matt Mueller <mattmuelle@gmail.com>","license":"MIT","types":"lib/index.d.ts"}
+{"name":"cheerio","author":"Matt Mueller <mattmuelle@gmail.com>","license":"MIT","types":"lib/index.d.ts"}
