--- a/packages/utils/compiled/cross-spawn/package.json
+++ b/packages/utils/compiled/cross-spawn/package.json
@@ -1,1 +1,1 @@
-{"name":"cross-spawn","main":"index.js","author":"André Cruz <andre@moxy.studio>","license":"MIT"}
+{"name":"cross-spawn","author":"André Cruz <andre@moxy.studio>","license":"MIT"}
