--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -46,6 +46,7 @@
     "lodash": "4.17.21",
     "pkg-up": "3.1.0",
     "portfinder": "1.0.28",
+    "resolve": "1.20.0",
     "rimraf": "3.0.2",
     "semver": "7.3.5",
     "strip-ansi": "6.0.0",
@@ -65,6 +66,7 @@
       "pkg-up",
       "portfinder",
       "rimraf",
+      "resolve",
       "semver",
       "strip-ansi",
       "yargs-parser"
@@ -82,6 +84,7 @@
       "pkg-up": "$$LOCAL",
       "portfinder": "$$LOCAL",
       "rimraf": "$$LOCAL",
+      "resolve": "$$LOCAL",
       "semver": "$$LOCAL",
       "strip-ansi": "$$LOCAL",
       "yargs-parser": "$$LOCAL"
